@@ -78,6 +78,11 @@ Other Changes
 
   Ref #5392
 
+* The ``set_option`` method of ``BaseChecker`` has been deprecated. You can use ``checker.linter.set_option``
+  to set an option on the global configuration object instead of a checker-specific object.
+
+  Ref #5392
+
 * The ``config`` attribute of ``PyLinter`` is now of the ``argparse.Namespace`` type instead of
   ``optparse.Values``.
 
