@@ -798,33 +798,18 @@ class SimilarChecker(BaseChecker, Similar, MapReduceMixin):
         Overridden to report options setting to Similar
         """
         # pylint: disable-next=fixme
-        # TODO: Refactor after OptionProvider has been moved to argparse
-        BaseChecker.set_option(self, optname, value, action, optdict)
+        # TODO: Deprecate the non required arguments
+        self.linter.set_option(optname, value)
         if optname == "min-similarity-lines":
-            self.min_lines = (
-                getattr(self.linter.namespace, "min_similarity_lines", None)
-                or self.config.min_similarity_lines
-            )
+            self.min_lines = self.linter.namespace.min_similarity_lines
         elif optname == "ignore-comments":
-            self.ignore_comments = (
-                getattr(self.linter.namespace, "ignore_comments", None)
-                or self.config.ignore_comments
-            )
+            self.ignore_comments = self.linter.namespace.ignore_comments
         elif optname == "ignore-docstrings":
-            self.ignore_docstrings = (
-                getattr(self.linter.namespace, "ignore_docstrings", None)
-                or self.config.ignore_docstrings
-            )
+            self.ignore_docstrings = self.linter.namespace.ignore_docstrings
         elif optname == "ignore-imports":
-            self.ignore_imports = (
-                getattr(self.linter.namespace, "ignore_imports", None)
-                or self.config.ignore_imports
-            )
+            self.ignore_imports = self.linter.namespace.ignore_imports
         elif optname == "ignore-signatures":
-            self.ignore_signatures = (
-                getattr(self.linter.namespace, "ignore_signatures", None)
-                or self.config.ignore_signatures
-            )
+            self.ignore_signatures = self.linter.namespace.ignore_signatures
 
     def open(self):
         """Init the checkers: reset linesets and statistics information."""
